--- a/gen_bntl.ipynb
+++ b/gen_bntl.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import the original JSON files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +33,7 @@
     "from pathlib import Path\n",
     "import json, codecs\n",
     "from collections import defaultdict\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "\n",
     "log_to_stdout(LogLevel.WarningLog)\n",
@@ -44,31 +52,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Import the original JSON files"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4d7ab6f2a404f14a5f433efff7ff234",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "building ordinal mapping file:   0%|          | 0/339 [00:00<?, ?typelibs/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -78,25 +65,25 @@
     }
    ],
    "source": [
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "mapping = {}\n",
-    "items = list(Path(\"/Users/peterlafosse/src/binaryninja/typelib/x86_64/\").glob(\"*.dll.bntl\"))\n",
-    "for file in tqdm(items, total=len(items), unit=\"typelibs\", desc=\"building ordinal mapping file\"):\n",
-    "    filename = file.name\n",
-    "    file = str(file)\n",
-    "    tl = TypeLibrary.load_from_file(file)\n",
-    "    if tl is None:\n",
-    "        print(file)\n",
-    "    assert tl is not None, f\"Failed to open {file}\"\n",
-    "    ordinals_name = tl.query_metadata(\"ordinals\")\n",
-    "    ordinals = tl.query_metadata(str(ordinals_name))\n",
-    "    mapping[filename] = {}\n",
-    "    mapping[filename][\"guid\"] = tl.guid\n",
-    "    mapping[filename][\"ordinals\"] = ordinals_name\n",
-    "    mapping[filename][ordinals_name] = ordinals\n",
-    "with open(\"mappingfile.json\", \"w\") as f:\n",
-    "    json.dump(mapping, f)\n",
+    "update_mapping_file = False\n",
+    "if update_mapping_file:\n",
+    "    mapping = {}\n",
+    "    items = list(Path(\"/Users/peterlafosse/src/binaryninja/typelib/x86_64/\").glob(\"*.dll.bntl\"))\n",
+    "    for file in tqdm(items, total=len(items), unit=\"typelibs\", desc=\"building ordinal mapping file\"):\n",
+    "        filename = file.name\n",
+    "        file = str(file)\n",
+    "        tl = TypeLibrary.load_from_file(file)\n",
+    "        if tl is None:\n",
+    "            print(file)\n",
+    "        assert tl is not None, f\"Failed to open {file}\"\n",
+    "        ordinals_name = tl.query_metadata(\"ordinals\")\n",
+    "        ordinals = tl.query_metadata(str(ordinals_name))\n",
+    "        mapping[filename] = {}\n",
+    "        mapping[filename][\"guid\"] = tl.guid\n",
+    "        mapping[filename][\"ordinals\"] = ordinals_name\n",
+    "        mapping[filename][ordinals_name] = ordinals\n",
+    "    with open(\"mappingfile.json\", \"w\") as f:\n",
+    "        json.dump(mapping, f)\n",
     "print(\"Success\")"
    ]
   },
@@ -109,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +183,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a reverse mapping of api,type_name\n",
-    "So we can figure out which are the common types"
+    "## Discover common dependencies so they can go in the same file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -316,12 +302,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build the TypeLibraries"
+    "## Now that we have the mappings we need... here's the method for adding types to a library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -628,25 +614,6 @@
     "    else:\n",
     "        print(f\"Found unknown type kind: {t['Kind']}\")\n",
     "\n",
-    "win_common = {}\n",
-    "for key, arch_name, arch, platform, bntl_name in lib_sets:\n",
-    "    defined_types = defaultdict(lambda: defaultdict(lambda: defaultdict(lambda: None)))\n",
-    "    win_common[key] = TypeLibrary.new(arch, bntl_name)\n",
-    "    win_common[key].add_platform(platform)\n",
-    "    filename = f\"output/{arch_name}/{bntl_name}.bntl\"\n",
-    "\n",
-    "    for api, type_name in most_common_types[key]:\n",
-    "        type = types[key][api][type_name]\n",
-    "        if type is None:\n",
-    "            if not type_name.startswith(\"_\"):\n",
-    "                print(\"couldn't find: \", key, api, type_name)\n",
-    "            continue\n",
-    "        add_to_type_library(win_common[key], key, api, QualifiedName(type_name), type, {})\n",
-    "    # ensure GUID is defined as its _special_\n",
-    "    add_to_type_library(win_common[key], key, \"\", QualifiedName(\"GUID\"), {\"Kind\":\"Native\",\"Name\":\"Guid\"}, {})\n",
-    "\n",
-    "    win_common[key].finalize()\n",
-    "    win_common[key].write_to_file(filename)\n",
     "\n",
     "# for arch, total in zip(arch_list, [828, 829, 827]):\n",
     "#     cur_total = len(win_common[arch].named_types)\n",
@@ -666,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -730,8 +697,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handle Kernelbase Exports\n",
+    "\n",
+    "KernelBase is _special_ and just exports things it imports from other libraries. The original data doesn't have those mapped properly so we come up with that mapping here..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,11 +716,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# libs[\"X64\"][\"bthprops\"][\"Devices.Bluetooth\"][\"BluetoothSelectDevicesFree\"]\n",
+    "# Helper mapping to look up which API is defined in which DLL\n",
     "libs_by_func_name = defaultdict(list)\n",
     "for api_name, api_mapping in libs[\"X64\"].items():\n",
     "    for dll_name, func_mapping in api_mapping.items():\n",
@@ -753,126 +729,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create The Type Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d855043f229445da11781bd9f0c8b75",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Building kernelbase:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bb54bffbe8043dbbdc5f6b908d7835a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Building Type Libraries:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b0e83b72aee43c4b2df3e6ba337f74b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Building x86_64 Type Libraries:   0%|          | 0/313 [00:00<?, ?typelibs/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51f640c037cb4430b483bfc2adfbf994",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Building aarch64 Type Libraries:   0%|          | 0/313 [00:00<?, ?typelibs/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ab31f48f06249eca08cbf323afdf893",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Building x86 Type Libraries:   0%|          | 0/313 [00:00<?, ?typelibs/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
-      "here\n",
+      "Building common bntl file winX64common\n",
+      "Building common bntl file winArm64common\n",
+      "Building common bntl file win32common\n",
+      "Building kernelbase x86_64\n",
+      "Building kernelbase aarch64\n",
+      "Building kernelbase x86\n",
+      "Building Type Library for x86_64\n",
+      "Building Type Library for aarch64\n",
+      "Building Type Library for x86\n",
       "Success\n"
      ]
     }
@@ -888,6 +768,28 @@
     "ordinal_data[\"X64\"] = json.load(open(\"mappingfile.json\"))\n",
     "typelibs = {}\n",
     "\n",
+    "win_common = {}\n",
+    "for key, arch_name, arch, platform, bntl_name in lib_sets:\n",
+    "    print(f\"Building common bntl file {bntl_name}\")\n",
+    "    defined_types = defaultdict(lambda: defaultdict(lambda: defaultdict(lambda: None)))\n",
+    "    win_common[key] = TypeLibrary.new(arch, bntl_name)\n",
+    "    win_common[key].add_platform(platform)\n",
+    "    filename = f\"output/{arch_name}/{bntl_name}.bntl\"\n",
+    "\n",
+    "    for api, type_name in most_common_types[key]:\n",
+    "        type = types[key][api][type_name]\n",
+    "        if type is None:\n",
+    "            if not type_name.startswith(\"_\"):\n",
+    "                print(\"couldn't find: \", key, api, type_name)\n",
+    "            continue\n",
+    "        add_to_type_library(win_common[key], key, api, QualifiedName(type_name), type, {})\n",
+    "    # ensure GUID is defined as its _special_\n",
+    "    add_to_type_library(win_common[key], key, \"\", QualifiedName(\"GUID\"), {\"Kind\":\"Native\",\"Name\":\"Guid\"}, {})\n",
+    "\n",
+    "    win_common[key].finalize()\n",
+    "    win_common[key].write_to_file(filename)\n",
+    "\n",
+    "\n",
     "func_api_map = defaultdict(lambda :defaultdict(list))\n",
     "for key, arch_name, arch, platform, dependency_name in lib_sets:\n",
     "    for dll_name, api_mapping in libs[key].items():\n",
@@ -895,7 +797,8 @@
     "            for func_name, func_info in func_mapping.items():\n",
     "                func_api_map[key][func_name].append((dll_name, api_name))\n",
     "\n",
-    "for key, arch_name, arch, platform, dependency_name in tqdm(lib_sets, total=len(lib_sets), desc=f\"Building kernelbase\"):\n",
+    "for key, arch_name, arch, platform, dependency_name in lib_sets:\n",
+    "    print(f\"Building kernelbase {arch_name}\")\n",
     "    typelib = TypeLibrary.new(arch, \"kernelbase.dll\")\n",
     "    typelib.add_platform(platform)\n",
     "    typelib.dependency_name = dependency_name\n",
@@ -924,8 +827,9 @@
     "    typelibs[f\"output/{arch_name}/kernelbase.dll.bntl\"] = typelib\n",
     "\n",
     "\n",
-    "for key, arch_name, arch, platform, dependency_name in tqdm(lib_sets, total=len(lib_sets), desc=f\"Building Type Libraries\"):\n",
-    "    for lib_name, func_list in tqdm(libs[key].items(), total=len(libs[key]), unit=\"typelibs\", desc=f\"Building {arch_name} Type Libraries\"):\n",
+    "for key, arch_name, arch, platform, dependency_name in lib_sets:\n",
+    "    print(f\"Building Type Libraries for {arch_name}\")\n",
+    "    for lib_name, func_list in libs[key].items():\n",
     "        orig_name = lib_name\n",
     "        lib_name = normalize_dll_name(lib_name)\n",
     "        typelib = TypeLibrary.new(arch, lib_name)\n",
@@ -962,45 +866,6 @@
     "        typelibs[f\"output/{arch_name}/{lookup_name}\"] = typelib\n",
     "\n",
     "print(\"Success\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Generate .def files for testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create .def files\n",
-    "for arch_name, dll_mapping in libs.items():\n",
-    "    for dll_name, api_mapping in dll_mapping.items():\n",
-    "        file_name = f\"code/{arch_name}/{dll_name}.def\"\n",
-    "        with open(file_name, \"w\") as f:\n",
-    "            f.write(f\"LIBRARY {dll_name}\\n\")\n",
-    "            f.write(\"EXPORTS\\n\")\n",
-    "            for api_name, func_mapping in api_mapping.items():\n",
-    "                for func_name in func_mapping.keys():\n",
-    "                    f.write(f\"\\t{func_name}\\n\")\n",
-    "\n",
-    "# build a script to compile those def files\n",
-    "with open(\"mega_build.bat\", \"w\") as mega:\n",
-    "    for arch_name, dll_mapping in libs.items():\n",
-    "        for dll_name, api_mapping in dll_mapping.items():\n",
-    "            file_name = f\"code/{arch_name}/{dll_name}_test.cpp\"\n",
-    "            with open(file_name, \"w\") as f:\n",
-    "                calls = \"\"\n",
-    "                for api_name, func_mapping in api_mapping.items():\n",
-    "                    for func_name in func_mapping.keys():\n",
-    "                        f.write(f\"extern \\\"C\\\" void {func_name}();\\n\")\n",
-    "                        calls += f\"\\t{func_name}();\\n\"\n",
-    "                f.write(\"int WinMain(){\\n\" + calls + \"\\treturn 1;\\n}\")\n",
-    "                mega.write(f\"cl code\\\\{arch_name}\\\\{dll_name}_test.cpp /link /LIBPATH:\\\"C:\\\\Program Files (x86)\\\\Windows Kits\\\\10\\\\Lib\\\\10.0.18362.0\\\\um\\\\x64\\\" /DEFAULTLIB:{dll_name}\\n\")\n"
    ]
   }
  ],
