Update win32json/win32jsongen for latest windows metadata

--- a/gen_bntl.ipynb
+++ b/gen_bntl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -196,20 +196,20 @@
      "output_type": "stream",
      "text": [
       "Arm64\n",
-      "  33245 - Count of all types\n",
-      "  256  - Count of types which appear in more than one library\n",
-      "  353 - Dependencies of these common types\n",
-      "  506 - Dependencies and common types\n",
+      "  33216 - Count of all types\n",
+      "  259  - Count of types which appear in more than one library\n",
+      "  357 - Dependencies of these common types\n",
+      "  512 - Dependencies and common types\n",
       "X64\n",
-      "  33247 - Count of all types\n",
-      "  256  - Count of types which appear in more than one library\n",
-      "  352 - Dependencies of these common types\n",
-      "  505 - Dependencies and common types\n",
+      "  33217 - Count of all types\n",
+      "  259  - Count of types which appear in more than one library\n",
+      "  356 - Dependencies of these common types\n",
+      "  511 - Dependencies and common types\n",
       "X86\n",
-      "  33237 - Count of all types\n",
-      "  255  - Count of types which appear in more than one library\n",
-      "  351 - Dependencies of these common types\n",
-      "  503 - Dependencies and common types\n",
+      "  33207 - Count of all types\n",
+      "  258  - Count of types which appear in more than one library\n",
+      "  355 - Dependencies of these common types\n",
+      "  509 - Dependencies and common types\n",
       "Success\n"
      ]
     }
@@ -292,7 +292,7 @@
     "    most_common_types[arch] |= dependencies[arch]\n",
     "    print(f\"  {len(most_common_types[arch])} - Dependencies and common types\")\n",
     "\n",
-    "for arch, total in zip(arch_list, [33245, 33247, 33237]):\n",
+    "for arch, total in zip(arch_list, [33216, 33217, 33207]):\n",
     "    cur_total = sum([len(type) for type in types[arch].values()])\n",
     "    assert cur_total == total, f\"Total {arch} types not equal to {total} instead {cur_total}\"\n",
     "print(\"Success\")"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -750,9 +750,9 @@
       "Building kernelbase x86_64\n",
       "Building kernelbase aarch64\n",
       "Building kernelbase x86\n",
-      "Building Type Library for x86_64\n",
-      "Building Type Library for aarch64\n",
-      "Building Type Library for x86\n",
+      "Building Type Libraries for x86_64\n",
+      "Building Type Libraries for aarch64\n",
+      "Building Type Libraries for x86\n",
       "Success\n"
      ]
     }
